# end-to-end-video-game-ml

./: .env.example  .gitattributes  .gitignore  DATA_PROTECTION.md  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dokploy.yml  docker-compose.yml  install.sh  linux_containers.txt  requirements.dev.in  requirements.txt  setup.py
Streamlit/: app.py  utils.py
cookiecutter-test/game-insight-project/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cookiecutter-test/game-insight-project/docs/: mkdocs.yml
cookiecutter-test/game-insight-project/docs/docs/: index.md
cookiecutter-test/game-insight-project/game_insight_project/: __init__.py  dataset.py  features.py  plots.py
cookiecutter-test/game-insight-project/game_insight_project/modeling/: predict.py  train.py
data/raw/: games_1980.csv  games_1981.csv  games_1982.csv  games_1983.csv  games_1984.csv  games_1985.csv  games_1986.csv  games_1987.csv  games_1988.csv  games_1989.csv  games_1990.csv  games_1991.csv  games_1992.csv  games_1993.csv  games_1994.csv  games_1995.csv  games_1996.csv  games_1997.csv  games_1998.csv  games_1999.csv  games_2000.csv  games_2001.csv  games_2002.csv  games_2003.csv  games_2004.csv  (+4 more)
docs/: Makefile  commands.rst  conf.py  getting-started.rst  index.rst  make.bat
fluentd/: fluent.conf  fluentd.conf
game-insight-project/: README.md  docker-compose.yml
notebooks/: dynamodb-connection.ipynb  mongodb-connection.ipynb  rawg-data-extraction.ipynb  s3-bucket-connection.ipynb  selected_game.csv  streamlit_test.ipynb
tests/: test_api.py  test_worker.py
(+44 files in other folders)
